--- a/styles/styles.css
+++ b/styles/styles.css
@@ -447,6 +447,17 @@ article button {
     grid-area: button;
 }
 
+article button:hover {
+    background-color: white;
+    color: black;
+}
+
+article button:active {
+    background-color: white;
+    color: black;
+    transform: translateY (4px);
+}
+
 .terug {
     border-radius: 2rem;
     border: none;
@@ -460,6 +471,16 @@ article button {
     /*position: absolute;
     left: 30rem;*/
 } 
+.terug:hover {
+    background-color: white;
+    color: black;
+}
+
+.terug:active {
+    background-color: white;
+    color: black;
+}
+
 
 /* mid-sized versie */
 
@@ -553,15 +574,6 @@ article button {
     article p {
         grid-area: description;
     }
-
-    /*article:nth-of-type(1n) {
-        float:left;
-        margin: 1rem;
-    }
-
-    article:nth-of-type(2n) {
-        float: right;
-    }*/
 
     .articles {
         display: flex;
